--- a/popup.html
+++ b/popup.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="popup.css">
     <title>LinkedIn Profile Analyzer</title>
 </head>
 <body>
     <h2>LinkedIn Profile Data</h2>
+
+    <!-- Cover Photo -->
+    <img id="coverPhoto" alt="Cover Photo" src="">
+
+    <!-- Profile Picture -->
+    <img id="profilePicture" alt="Profile Picture" src="">
+
     <div id="profile-info">
         <p><strong>Name:</strong> <span id="name"></span></p>
         <p><strong>Headline:</strong> <span id="headline"></span></p>
-        <p><strong>Current Position:</strong> <span id="currentPosition"></span></p>
-        <p><strong>Contact Info:</strong> <span id="contactInfo"></span></p>
     </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
