--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,8 @@
     <div id="profile-info">
         <p><strong>Name:</strong> <span id="name"></span></p>
         <p><strong>Headline:</strong> <span id="headline"></span></p>
+        <p><strong>About:</strong> <span id="about"></span></p>
+        <p><strong>Experience:</strong> <span id="experience"></span></p>
     </div>
 
     <script src="popup.js"></script>
