--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,11 @@
         <p><strong>Name:</strong> <span id="name"></span></p>
         <p><strong>Headline:</strong> <span id="headline"></span></p>
         <p><strong>About:</strong> <span id="about"></span></p>
-        <p><strong>Experience:</strong> <span id="experience"></span></p>
+        <p><strong>Top Skills:</strong><span id="topSkills"></span></p>
+        <p><strong>First experience:</strong></p>
+        <P><strong>Title:</strong><span id="f-e-t"></span></P>
+        <p><strong>Company:</strong><span id="f-e-c"></span></P>
+        <p><strong>Description:</strong><span id="f-e-d"></span></P>
     </div>
 
     <script src="popup.js"></script>
