--- a/popup.html
+++ b/popup.html
@@ -20,11 +20,25 @@
         <p><strong>Headline:</strong> <span id="headline"></span></p>
         <p><strong>About:</strong> <span id="about"></span></p>
         <p><strong>Top Skills:</strong><span id="topSkills"></span></p>
-        <p><strong>First experience:</strong></p>
-        <P><strong>Title:</strong><span id="f-e-t"></span></P>
-        <p><strong>Company:</strong><span id="f-e-c"></span></P>
-        <p><strong>Description:</strong><span id="f-e-d"></span></P>
-    </div>
+        <div>
+         <p><strong>Current Possession:</strong></p>
+         <P><strong>Title:</strong><span id="f-e-t"></span></P>
+         <p><strong>Company:</strong><span id="f-e-c"></span></P>
+         <p><strong>Description:</strong><span id="f-e-d"></span></P>
+        </div>
+        <div>
+            <p><strong>Befor Current Possession:</strong></p>
+            <P><strong>Title:</strong><span id="b-f-e-t"></span></P>
+            <p><strong>Company:</strong><span id="b-f-e-c"></span></P>
+            <p><strong>Description:</strong><span id="b-f-e-d"></span></P>
+        </div>
+        <div>
+            <p><strong>Other Possession:</strong></p>
+            <P><strong>Title:</strong><span id="o-f-e-t"></span></P>
+            <p><strong>Company:</strong><span id="o-f-e-c"></span></P>
+            <p><strong>Description:</strong><span id="o-f-e-d"></span></P>
+        </div>
+        </div>
 
     <script src="popup.js"></script>
 </body>
